cluster/apps/default/legacy-proxy/legacy-proxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: legacy-proxy
  namespace: default
spec:
  rules:
  - host: hass.bergmann.click
    http:
      paths:
      - backend:
          service:
            name: homepi-service
            port:
              number: 8123
        path: /
        pathType: Prefix
  - host: zigbee.bergmann.click
    http:
      paths:
      - backend:
          service:
            name: homepi-service
            port:
              number: 8081
        path: /
        pathType: Prefix
  - host: zwave.bergmann.click
    http:
      paths:
      - backend:
          service:
            name: homepi-service
            port:
              number: 8091
        path: /
        pathType: Prefix
  - host: minecraft.bergmann.click
    http:
      paths:
      - backend:
          service:
            name: neuesding-service
            port:
              number: 25800
        path: /
        pathType: Prefix
  - host: gw-1.bergmann.click
    http:
      paths:
      - backend:
          service:
            name: gw-service
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hass.bergmann.click
    secretName: hass-cert
  - hosts:
    - zigbee.bergmann.click
    secretName: zigbee-cert
  - hosts:
    - zwave.bergmann.click
    secretName: zwave-cert
  - hosts:
    - gw-1.bergmann.click
    secretName: gw1-cert
  - hosts:
    - minecraft.bergmann.click
    secretName: minecraft-cert
---
apiVersion: v1
kind: Service
metadata:
  name: homepi-service
  namespace: default
spec:
  externalName: homepi.home.bergmann.click
  ports:
  - name: http-hass
    port: 8123
    protocol: TCP
    targetPort: 8123
  - name: http-zigbee2mqtt
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: http-zwavejs2mqtt
    port: 8091
    protocol: TCP
    targetPort: 8091
  sessionAffinity: None
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: gw-service
  namespace: default
spec:
  externalName: gw-1.home.bergmann.click
  ports:
  - name: https-gw
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: neuesding-service
  namespace: default
spec:
  externalName: neuesding.home.bergmann.click
  ports:
  - name: https-mcss
    port: 25800
    protocol: TCP
    targetPort: 25800
  sessionAffinity: None
  type: ExternalName
